📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -16894,5 +16894,125 @@
         "published": "Tue, 16 Dec 2025 21:14:49 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46294574\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/news/845760/samsung-micro-rgb-led-ces-2026",
+        "title": "Samsung\u2019s 2026 Micro RGB LED TVs can actually fit in your living room",
+        "link": "https://www.theverge.com/news/845760/samsung-micro-rgb-led-ces-2026",
+        "published": "2025-12-16T18:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Following the release of the 115-inch Micro RGB TV back in August, Samsung has revealed today that its Micro RGB technology will extend into smaller sizes ranging from that 115-inch behemoth all the way down to 55 inches. While we all enjoy dreaming big, it's far more reasonable for most of us to consider putting [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/845882/x-corp-operation-bluebird-twitter-lawsuit-trademark-infringement",
+        "title": "\u2018Twitter never left:\u2019 X sues Operation Bluebird for trademark infringement",
+        "link": "https://www.theverge.com/news/845882/x-corp-operation-bluebird-twitter-lawsuit-trademark-infringement",
+        "published": "2025-12-16T17:33:26-05:00",
+        "source": "The Verge",
+        "summary": "X Corp. is suing Operation Bluebird, a recently-announced startup that aims to reclaim the Twitter brand for a new social network. In a lawsuit filed on Tuesday, the Elon Musk-owned company alleges Operation Bluebird is \"brazenly attempting to steal\" Twitter's trademarks, claiming \"Twitter never left and continues to be exclusively owned by X Corp.\" Last [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/845869/ustr-eu-trade-threat-spotify-mistral",
+        "title": "Trump admin threatens retaliation against Spotify and others over EU tech regulation",
+        "link": "https://www.theverge.com/news/845869/ustr-eu-trade-threat-spotify-mistral",
+        "published": "2025-12-16T17:28:36-05:00",
+        "source": "The Verge",
+        "summary": "The Office of the US Trade Representative posted on X Tuesday, claiming that US service providers have been hit by \"a continuing course of discriminatory and harassing lawsuits, taxes, fines, and directives\" from the EU. Earlier this month, X was fined $140 million under the EU's Digital Services Act (DSA), in addition to new laws, [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/23674658/best-android-phone",
+        "title": "The best Android phones",
+        "link": "https://www.theverge.com/23674658/best-android-phone",
+        "published": "2025-12-16T17:18:06-05:00",
+        "source": "The Verge",
+        "summary": "The Android ecosystem is all about choice. While iPhone owners have a smaller pool of new devices to pick from when it\u2019s time to upgrade, there\u2019s a wider range of choices on Android. Some Android phones even fold in half! Imagine. On the flip side, all that choice can make for some hard decisions. Here\u2019s [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2025/12/texas-sues-biggest-tv-makers-alleging-smart-tvs-spy-on-users-without-consent/",
+        "title": "Texas sues biggest TV makers, alleging smart TVs spy on users without consent",
+        "link": "https://arstechnica.com/tech-policy/2025/12/texas-sues-biggest-tv-makers-alleging-smart-tvs-spy-on-users-without-consent/",
+        "published": "Tue, 16 Dec 2025 21:57:55 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Automated Content Recognition brings \"mass surveillance\" to homes, lawsuits say."
+    },
+    {
+        "id": "https://arstechnica.com/space/2025/12/the-4-3-billion-space-telescope-trump-tried-to-cancel-is-now-complete/",
+        "title": "The $4.3 billion space telescope Trump tried to cancel is now complete",
+        "link": "https://arstechnica.com/space/2025/12/the-4-3-billion-space-telescope-trump-tried-to-cancel-is-now-complete/",
+        "published": "Tue, 16 Dec 2025 21:25:05 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "\"We're going to be making 3D movies of what is going on in the Milky Way galaxy.\""
+    },
+    {
+        "id": "https://gizmodo.com/ai-image-falsely-suggests-bondi-beach-terror-attack-was-staged-2000700302",
+        "title": "AI Image Falsely Suggests Bondi Beach Terror Attack Was Staged",
+        "link": "https://gizmodo.com/ai-image-falsely-suggests-bondi-beach-terror-attack-was-staged-2000700302",
+        "published": "Tue, 16 Dec 2025 22:47:43 +0000",
+        "source": "Gizmodo",
+        "summary": "Grok, ChatGPT, and Claude all insist the image is real."
+    },
+    {
+        "id": "https://gizmodo.com/trumps-chief-of-staff-reportedly-spouted-off-about-elon-musk-and-drugs-to-vanity-fair-2000700235",
+        "title": "Trump\u2019s Chief of Staff Reportedly Spouted Off About Elon Musk and Drugs to Vanity Fair",
+        "link": "https://gizmodo.com/trumps-chief-of-staff-reportedly-spouted-off-about-elon-musk-and-drugs-to-vanity-fair-2000700235",
+        "published": "Tue, 16 Dec 2025 22:30:27 +0000",
+        "source": "Gizmodo",
+        "summary": "She calls him \"an odd, odd duck\" in a newly published article."
+    },
+    {
+        "id": "https://gizmodo.com/monopoly-san-diego-edition-comic-con-2000700471",
+        "title": "This Oddly-Specific Monopoly Set Will Curb Your SDCC Travel Nightmares",
+        "link": "https://gizmodo.com/monopoly-san-diego-edition-comic-con-2000700471",
+        "published": "Tue, 16 Dec 2025 22:18:03 +0000",
+        "source": "Gizmodo",
+        "summary": "Of course 'Monopoly: San Diego Edition' includes multiple Comic-Con-related locations."
+    },
+    {
+        "id": "https://gizmodo.com/ford-effectively-kills-the-biden-era-dream-of-all-electric-trucks-2000700476",
+        "title": "Ford Effectively Kills the Biden-Era Dream of All-Electric Trucks",
+        "link": "https://gizmodo.com/ford-effectively-kills-the-biden-era-dream-of-all-electric-trucks-2000700476",
+        "published": "Tue, 16 Dec 2025 22:12:58 +0000",
+        "source": "Gizmodo",
+        "summary": "The Ford F-150 Lightning was a symbol of the electric future in pickup truck form. It\u2019s now dead."
+    },
+    {
+        "id": "https://mashable.com/gifts/best-gifts-under-50-dollars",
+        "title": "We found 35+ unique gifts under $50 for the holidays",
+        "link": "https://mashable.com/gifts/best-gifts-under-50-dollars",
+        "published": "Tue, 16 Dec 2025 22:33:30 +0000",
+        "source": "Mashable",
+        "summary": "Shop tons of unique gift ideas under $50, including a bunch of budget-friendly products we've tested and loved ourselves."
+    },
+    {
+        "id": "https://mashable.com/article/open-ai-launches-nano-banana-competitor-chatgpt-images",
+        "title": "OpenAI launches new ChatGPT Images tool to rival Nano Banana: How to try it",
+        "link": "https://mashable.com/article/open-ai-launches-nano-banana-competitor-chatgpt-images",
+        "published": "Tue, 16 Dec 2025 22:27:04 +0000",
+        "source": "Mashable",
+        "summary": "Google's AI image generator and editor Nano Banana has been a huge hit. And on Dec. 16, OpenAI launched a new image editing tool of its own \u2014 ChatGPT Images."
+    },
+    {
+        "id": "https://mashable.com/article/laptop-price-increase-ddr5-ram-ai",
+        "title": "All signs point to big laptop and smartphone price increases due to escalating memory shortage",
+        "link": "https://mashable.com/article/laptop-price-increase-ddr5-ram-ai",
+        "published": "Tue, 16 Dec 2025 22:00:49 +0000",
+        "source": "Mashable",
+        "summary": "Laptop prices could jump in the near future due to the suddenly increased demand for RAM hardware. Samsung has reportedly doubled the price of DR55 RAM."
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsung-micro-rgb-tv-new-models-ces-2026/",
+        "title": "Samsung unveils new Micro RGB TVs ahead of CES 2026, and they're seriously tempting",
+        "link": "https://www.zdnet.com/article/samsung-micro-rgb-tv-new-models-ces-2026/",
+        "published": "Tue, 16 Dec 2025 23:00:43 GMT",
+        "source": "Latest news",
+        "summary": "Samsung is expanding its Micro RGB TV lineup next year to include six new sizes replete with AI features."
+    },
+    {
+        "id": "https://astral.sh/blog/ty",
+        "title": "Ty: A fast Python type checker and LSP",
+        "link": "https://astral.sh/blog/ty",
+        "published": "Tue, 16 Dec 2025 20:52:45 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46294289\">Comments</a>"
     }
 ]
