📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -17014,5 +17014,69 @@
         "published": "Tue, 16 Dec 2025 20:52:45 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46294289\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/column/845955/donald-trump-big-tech-2025",
+        "title": "How Silicon Valley turned Trump into a fellow broligarch",
+        "link": "https://www.theverge.com/column/845955/donald-trump-big-tech-2025",
+        "published": "2025-12-16T19:32:50-05:00",
+        "source": "The Verge",
+        "summary": "Hello and welcome to 2025's last issue of Regulator. If you're not a Verge subscriber, get off the 2026 naughty list by signing up here. And if you're a Verge subscriber - well, dang, that's really nice of you. Last week, I appeared on The Brian Lehrer Show on WNYC to talk about my reporting [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/845678/alexa-dot-com-alexa-plus-website-live",
+        "title": "Alexa Plus\u2019 website is live for some users",
+        "link": "https://www.theverge.com/news/845678/alexa-dot-com-alexa-plus-website-live",
+        "published": "2025-12-16T18:10:44-05:00",
+        "source": "The Verge",
+        "summary": "The Alexa.com website appears to be live for some users. The browser-based home for Alexa Plus, the company's revamped digital voice assistant, was first announced at the Alexa Plus launch event in February. But until recently, Alexa.com redirected to an information page. Now, some users, myself included, are seeing a new Alexa Plus web interface. [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/jaguar-type-00-ev-first-ride-it-still-looks-odd-but-it-is-seriously-quick/",
+        "title": "Jaguar Type 00 EV First Ride: It Still Looks Odd, but It\u2019s Seriously Quick",
+        "link": "https://www.wired.com/story/jaguar-type-00-ev-first-ride-it-still-looks-odd-but-it-is-seriously-quick/",
+        "published": "Wed, 17 Dec 2025 00:00:00 +0000",
+        "source": "WIRED",
+        "summary": "We took a hair-raising trip around a track in the final four-door GT version of Jaguar's polarizing relaunch concept car. Is just might be good enough to end the British brand's abysmal run of luck."
+    },
+    {
+        "id": "https://www.engadget.com/social-media/x-was-spooked-enough-by-new-twitter-to-change-its-terms-of-service-231138305.html?src=rss",
+        "title": "X was spooked enough by new Twitter to change its terms of service",
+        "link": "https://www.engadget.com/social-media/x-was-spooked-enough-by-new-twitter-to-change-its-terms-of-service-231138305.html?src=rss",
+        "published": "Wed, 17 Dec 2025 00:13:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Despite changing its name and using decidedly bird-free branding, X is trying to hold on to its original Twitter trademarks, <a class=\"link\" href=\"https://techcrunch.com/2025/12/16/x-updates-its-terms-files-countersuit-to-lay-claim-to-the-twitter-trademark-after-newcomers-challenge/\" target=\"_blank\"><em>TechCrunch </em>reports</a>. The <a class=\"link\" href=\"https://www.engadget.com/social-media/xai-elon-musks-ai-company-just-purchased-x-elon-musks-social-media-company-221503759.html\" target=\""
+    },
+    {
+        "id": "https://gizmodo.com/fossilized-bee-nests-inside-skeletons-are-unlike-anything-weve-seen-before-2000700261",
+        "title": "Fossilized Bee Nests Inside Skeletons Are Unlike Anything We\u2019ve Seen Before",
+        "link": "https://gizmodo.com/fossilized-bee-nests-inside-skeletons-are-unlike-anything-weve-seen-before-2000700261",
+        "published": "Wed, 17 Dec 2025 00:05:11 +0000",
+        "source": "Gizmodo",
+        "summary": "In a first, burrowing bees have been discovered nesting inside the fossil remains of other mammals."
+    },
+    {
+        "id": "https://gizmodo.com/megan-spinoff-soulmate-canceled-blumhouse-universal-2000700555",
+        "title": "Th3 \u2018M3GAN\u2019 Cin3matic Univ3rs3 Might B3 D3ad",
+        "link": "https://gizmodo.com/megan-spinoff-soulmate-canceled-blumhouse-universal-2000700555",
+        "published": "Tue, 16 Dec 2025 23:47:19 +0000",
+        "source": "Gizmodo",
+        "summary": "Sexbot spinoff movie 'Soulm8te' has been removed from Universal's release calendar, though it may find new life elsewhere."
+    },
+    {
+        "id": "https://mashable.com/article/tiktok-ban-january",
+        "title": "TikTok isnt banned yet: Why you have until 2026",
+        "link": "https://mashable.com/article/tiktok-ban-january",
+        "published": "Tue, 16 Dec 2025 23:38:45 +0000",
+        "source": "Mashable",
+        "summary": "TikTok was threatened with a U.S. ban on December 16, 2025. But there's already an order which delays a ban until January 2026."
+    },
+    {
+        "id": "https://mashable.com/article/dec-16-magellantv-documentary-streaming-service",
+        "title": "Documentary fans can get MagellanTV for just $140",
+        "link": "https://mashable.com/article/dec-16-magellantv-documentary-streaming-service",
+        "published": "Tue, 16 Dec 2025 23:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Get lifetime access to MagellanTV for $139.97, its lowest price ever, and stream thousands of ad-free documentaries across history, science, space, crime, and nature."
     }
 ]
