📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -17078,5 +17078,93 @@
         "published": "Tue, 16 Dec 2025 23:00:00 +0000",
         "source": "Mashable",
         "summary": "Get lifetime access to MagellanTV for $139.97, its lowest price ever, and stream thousands of ad-free documentaries across history, science, space, crime, and nature."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/16/tesla-engaged-in-deceptive-marketing-for-autopilot-and-full-self-driving-judge-rules/",
+        "title": "Tesla engaged in deceptive marketing for Autopilot and Full Self-Driving, judge rules",
+        "link": "https://techcrunch.com/2025/12/16/tesla-engaged-in-deceptive-marketing-for-autopilot-and-full-self-driving-judge-rules/",
+        "published": "Wed, 17 Dec 2025 01:14:59 +0000",
+        "source": "TechCrunch",
+        "summary": "The judge ruled Tesla should have to suspend manufacturing and sales in California for 30 days, but the DMV stayed those rulings for 90 days to allow Tesla to comply."
+    },
+    {
+        "id": "https://www.theverge.com/policy/846054/elon-musk-susie-wiles-doge-usaid",
+        "title": "Even Trump\u2019s chief of staff was \u2018aghast\u2019 at Elon Musk\u2019s deadly USAID cuts",
+        "link": "https://www.theverge.com/policy/846054/elon-musk-susie-wiles-doge-usaid",
+        "published": "2025-12-16T20:23:03-05:00",
+        "source": "The Verge",
+        "summary": "Elon Musk, a billionaire who decimated the United States federal workforce using the Department of Government Efficiency, is not remembered fondly by the most powerful woman in Washington: Susie Wiles, White House Chief of Staff and the gatekeeper to President Donald Trump. In several on-the-record interviews with Vanity Fair's Chris Whipple conducted over the past [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/846034/arcade1up-basic-fun-dead-home-arcade",
+        "title": "Arcade1Up isn&#8217;t dead, maybe",
+        "link": "https://www.theverge.com/news/846034/arcade1up-basic-fun-dead-home-arcade",
+        "published": "2025-12-16T20:05:39-05:00",
+        "source": "The Verge",
+        "summary": "Days after a rumor circulated that home arcade machine maker Arcade1Up would be shutting down, the company has finally shared a statement about its future. \"Select assets\" from Arcade1Up have been acquired by toy company Basic Fun, and although Arcade1Up isn't dead, what's next for the brand is still a little murky. Last week, a [&#8230;]"
+    },
+    {
+        "id": "https://mashable.com/article/fallout-2-game-details",
+        "title": "Fallout 2 is full of game details. Heres a handy guide.",
+        "link": "https://mashable.com/article/fallout-2-game-details",
+        "published": "Wed, 17 Dec 2025 02:00:00 +0000",
+        "source": "Mashable",
+        "summary": "\"Fallout 2\" is full of game details. From Pip-Boys to power armor, the Prime Video series is a fan's Wasteland. Here's a guide."
+    },
+    {
+        "id": "https://mashable.com/article/fallout-season-2-twin-peaks-coffee-kyle-maclachlan",
+        "title": "Fallout Season 2, did you just pay homage to David Lynch?",
+        "link": "https://mashable.com/article/fallout-season-2-twin-peaks-coffee-kyle-maclachlan",
+        "published": "Wed, 17 Dec 2025 02:00:00 +0000",
+        "source": "Mashable",
+        "summary": "There's moment in \"Fallout\" Season 2 that isn't directly an ode to the late, great David Lynch, but it absolutely is."
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsung-micro-rgb-tv-models-ces-2026/",
+        "title": "Samsung new Micro RGB TVs make a compelling argument to switch from OLED - especially in these sizes",
+        "link": "https://www.zdnet.com/article/samsung-micro-rgb-tv-models-ces-2026/",
+        "published": "Wed, 17 Dec 2025 02:20:00 GMT",
+        "source": "Latest news",
+        "summary": "Samsung is expanding its Micro RGB TV lineup next year to include six new sizes, each equipped with Vision AI features."
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsung-ssd-t9-review/",
+        "title": "I tested Samsung's fastest portable SSD for work and travel, and it's changed how I transfer data",
+        "link": "https://www.zdnet.com/article/samsung-ssd-t9-review/",
+        "published": "Wed, 17 Dec 2025 02:06:00 GMT",
+        "source": "Latest news",
+        "summary": "Samsung's T9 SSD offers up to 4TB of storage and transfer speeds of up to 20Gbps - in an form factor that you just can't hate."
+    },
+    {
+        "id": "https://www.zdnet.com/article/otterbox-defender-pro-case-review/",
+        "title": "My search for the ultimate iPhone case is over: This one keeps it protected no matter what",
+        "link": "https://www.zdnet.com/article/otterbox-defender-pro-case-review/",
+        "published": "Wed, 17 Dec 2025 02:04:00 GMT",
+        "source": "Latest news",
+        "summary": "The Otterbox Defender Pro provides an extra layer of protection against damage, while also safeguarding resale value."
+    },
+    {
+        "id": "https://www.zdnet.com/article/encrypt-mac-files-free-simple-encrypto-app/",
+        "title": "Need to encrypt Mac files? I found a free app that makes it super easy",
+        "link": "https://www.zdnet.com/article/encrypt-mac-files-free-simple-encrypto-app/",
+        "published": "Wed, 17 Dec 2025 02:00:48 GMT",
+        "source": "Latest news",
+        "summary": "With Encrypto, you can also share your encrypted files with MacOS or Windows users."
+    },
+    {
+        "id": "https://www.zdnet.com/article/high-tech-pet-roll-up-door-review/",
+        "title": "The most bizarre smart home gadget I've tested this year had my dog jumping up and down",
+        "link": "https://www.zdnet.com/article/high-tech-pet-roll-up-door-review/",
+        "published": "Wed, 17 Dec 2025 02:00:00 GMT",
+        "source": "Latest news",
+        "summary": "Busy dog owners, rejoice. This smart door makes for easy transport."
+    },
+    {
+        "id": "https://www.aadillpickle.com/blog/midjourney-is-alemwjsl",
+        "title": "Midjourney is alemwjsl",
+        "link": "https://www.aadillpickle.com/blog/midjourney-is-alemwjsl",
+        "published": "Thu, 11 Dec 2025 00:25:57 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46226068\">Comments</a>"
     }
 ]
