📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -17166,5 +17166,61 @@
         "published": "Thu, 11 Dec 2025 00:25:57 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46226068\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/16/monzo-board-reportedly-pushed-out-ceo-anil-over-ipo-timing/",
+        "title": "Monzo board reportedly pushed out CEO Anil over IPO timing",
+        "link": "https://techcrunch.com/2025/12/16/monzo-board-reportedly-pushed-out-ceo-anil-over-ipo-timing/",
+        "published": "Wed, 17 Dec 2025 03:06:17 +0000",
+        "source": "TechCrunch",
+        "summary": "A key issue, reportedly, was IPO timing."
+    },
+    {
+        "id": "https://mashable.com/article/nyt-connections-hint-answer-today-december-17-2025",
+        "title": "NYT Connections hints today: Clues, answers for December 17, 2025",
+        "link": "https://mashable.com/article/nyt-connections-hint-answer-today-december-17-2025",
+        "published": "Wed, 17 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Connections is a New York Times word game that's all about finding the \"common threads between words.\" How to solve the puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/strands-nyt-hint-december-17-2025",
+        "title": "NYT Strands hints, answers for December 17, 2025",
+        "link": "https://mashable.com/article/strands-nyt-hint-december-17-2025",
+        "published": "Wed, 17 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The NYT Strands hints and answers you need to make the most of your puzzling experience."
+    },
+    {
+        "id": "https://mashable.com/article/wordle-today-answer-december-17-2025",
+        "title": "Wordle today: Answer, hints for December 17, 2025",
+        "link": "https://mashable.com/article/wordle-today-answer-december-17-2025",
+        "published": "Wed, 17 Dec 2025 03:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Here's the answer for \"Wordle\" #1641 on December 17 as well as a few hints, tips, and clues to help you solve it yourself."
+    },
+    {
+        "id": "https://mashable.com/video/the-pitt-season-2-trailer-hbo-max",
+        "title": "The Pitt Season 2 trailer teases chaotic July 4 emergency room shift",
+        "link": "https://mashable.com/video/the-pitt-season-2-trailer-hbo-max",
+        "published": "Wed, 17 Dec 2025 02:52:17 +0000",
+        "source": "Mashable",
+        "summary": "HBO Max's official trailer for 'The Pitt' Season 2 shows Dr. Robby (Noah Wyle) working a July 4 emergency room shift."
+    },
+    {
+        "id": "https://www.zdnet.com/article/forget-the-em-dash-here-are-three-five-telltale-signs-of-ai-generated-writing/",
+        "title": "Did AI write that? 5 ways to distinguish chatbots from human authors",
+        "link": "https://www.zdnet.com/article/forget-the-em-dash-here-are-three-five-telltale-signs-of-ai-generated-writing/",
+        "published": "Wed, 17 Dec 2025 03:01:08 GMT",
+        "source": "Latest news",
+        "summary": "Chatbots are getting better at impersonating human language, but they still have their imperfections."
+    },
+    {
+        "id": "https://www.zdnet.com/article/okta-improved-oauth-standard-network-security-ai-agents/",
+        "title": "The coming AI agent crisis: Why Okta's new security standard is a must-have for your business",
+        "link": "https://www.zdnet.com/article/okta-improved-oauth-standard-network-security-ai-agents/",
+        "published": "Wed, 17 Dec 2025 03:00:51 GMT",
+        "source": "Latest news",
+        "summary": "Counting Google, Amazon, and Microsoft among its early adopters, the new standard will provide organizations with more visibility and control over external applications. Here's how it works."
     }
 ]
