📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -17222,5 +17222,21 @@
         "published": "Wed, 17 Dec 2025 03:00:51 GMT",
         "source": "Latest news",
         "summary": "Counting Google, Amazon, and Microsoft among its early adopters, the new standard will provide organizations with more visibility and control over external applications. Here's how it works."
+    },
+    {
+        "id": "https://www.engadget.com/transportation/evs/tesla-used-deceptive-language-to-market-autopilot-california-judge-rules-035826786.html?src=rss",
+        "title": "Tesla used deceptive language to market Autopilot, California judge rules",
+        "link": "https://www.engadget.com/transportation/evs/tesla-used-deceptive-language-to-market-autopilot-california-judge-rules-035826786.html?src=rss",
+        "published": "Wed, 17 Dec 2025 03:58:26 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Tesla\u2019s sales in California should be suspended for 30 days because its marketing around Autopilot and Full Self-Driving misled consumers, a California administrative law judge has <a class=\"link rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=34e37b9c-8975-48da-aa39-df8bcd5badc3&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=248b6a9f-efad-4aac-8e94-fc5f8161af01&amp;featureId=text-link&amp;merchantName=CNBC&amp;linkText=ruled&amp;custData=eyJzb3VyY2VOYW1lIj"
+    },
+    {
+        "id": "https://mashable.com/video/disclosure-day-trailer-steven-spielberg-emily-blunt",
+        "title": "Disclosure Day trailer offers first look at Steven Spielbergs sci-fi alien film",
+        "link": "https://mashable.com/video/disclosure-day-trailer-steven-spielberg-emily-blunt",
+        "published": "Wed, 17 Dec 2025 03:37:11 +0000",
+        "source": "Mashable",
+        "summary": "The teaser trailer for 'Disclosure Day' has been released, offering a glimpse at Steven Spielberg's upcoming alien sci-fi film."
     }
 ]
