📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -17238,5 +17238,45 @@
         "published": "Wed, 17 Dec 2025 03:37:11 +0000",
         "source": "Mashable",
         "summary": "The teaser trailer for 'Disclosure Day' has been released, offering a glimpse at Steven Spielberg's upcoming alien sci-fi film."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/16/weeks-after-raising-100m-investors-pump-another-180m-into-hot-indian-startup-moengage/",
+        "title": "Weeks after raising $100M, investors pump another $180M into hot Indian startup MoEngage",
+        "link": "https://techcrunch.com/2025/12/16/weeks-after-raising-100m-investors-pump-another-180m-into-hot-indian-startup-moengage/",
+        "published": "Wed, 17 Dec 2025 05:20:00 +0000",
+        "source": "TechCrunch",
+        "summary": "The deal valued MoEngage at \"well over\" $900 million post-money."
+    },
+    {
+        "id": "https://www.wired.com/story/therabody-promo-code/",
+        "title": "Therabody Promo Codes: 50% Off | December 2025",
+        "link": "https://www.wired.com/story/therabody-promo-code/",
+        "published": "Wed, 17 Dec 2025 06:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Save on the science-backed devices you\u2019ve been eyeing with 15% off Theragun discount code and 50% off other great deals."
+    },
+    {
+        "id": "https://mashable.com/article/hurdle-hints-answers-december-17-2025",
+        "title": "Hurdle hints and answers for December 17, 2025",
+        "link": "https://mashable.com/article/hurdle-hints-answers-december-17-2025",
+        "published": "Wed, 17 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Hints and answers to today's Hurdle all in one place."
+    },
+    {
+        "id": "https://mashable.com/article/psg-vs-flamengo-fifa-intercontinental-cup-final-2025-live-stream-for-free",
+        "title": "How to watch PSG vs. Flamengo online for free",
+        "link": "https://mashable.com/article/psg-vs-flamengo-fifa-intercontinental-cup-final-2025-live-stream-for-free",
+        "published": "Wed, 17 Dec 2025 05:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to watch FIFA Intercontinental Cup for free. Live stream PSG vs. Flamengo in the FIFA Intercontinental Cup final for free."
+    },
+    {
+        "id": "https://dfarq.homeip.net/va-linux-the-biggest-dotcom-ipo/",
+        "title": "VA Linux: The biggest dotcom IPO",
+        "link": "https://dfarq.homeip.net/va-linux-the-biggest-dotcom-ipo/",
+        "published": "Thu, 11 Dec 2025 12:17:53 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46230456\">Comments</a>"
     }
 ]
