📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -17278,5 +17278,21 @@
         "published": "Thu, 11 Dec 2025 12:17:53 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46230456\">Comments</a>"
+    },
+    {
+        "id": "https://mashable.com/video/sabrina-carpenter-seth-meyers-day-drinking",
+        "title": "Sabrina Carpenter rates Seth Meyers in Christmas-themed edition of Day Drinking",
+        "link": "https://mashable.com/video/sabrina-carpenter-seth-meyers-day-drinking",
+        "published": "Wed, 17 Dec 2025 07:31:02 +0000",
+        "source": "Mashable",
+        "summary": "Sabrina Carpenter has gone day drinking with Seth Meyers for a Christmas-themed edition of his regular alcohol-fuelled segment."
+    },
+    {
+        "id": "https://plasticsoldierreview.com/ShowFeature.aspx?id=27",
+        "title": "Annual Production of 1/72 (22mm) scale plastic soldiers, 1958-2025",
+        "link": "https://plasticsoldierreview.com/ShowFeature.aspx?id=27",
+        "published": "Sat, 13 Dec 2025 14:51:43 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46254909\">Comments</a>"
     }
 ]
