📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -17294,5 +17294,21 @@
         "published": "Sat, 13 Dec 2025 14:51:43 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46254909\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/treblab-x4-earbuds-review/",
+        "title": "These are the longest-lasting earbuds I've tested - and they're only $30",
+        "link": "https://www.zdnet.com/article/treblab-x4-earbuds-review/",
+        "published": "Wed, 17 Dec 2025 08:25:48 GMT",
+        "source": "Latest news",
+        "summary": "Treblab's X4 earbuds are another solid entry in the brand's affordable lineup."
+    },
+    {
+        "id": "https://www.aljazeera.com/news/2025/11/28/venezuela-explained-in-10-maps-and-charts",
+        "title": "Venezuela explained in 10 maps and charts",
+        "link": "https://www.aljazeera.com/news/2025/11/28/venezuela-explained-in-10-maps-and-charts",
+        "published": "Sat, 13 Dec 2025 22:30:50 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46258830\">Comments</a>"
     }
 ]
